$Id: CHANGES,v 1.204 2003/01/10 10:31:06 stelian Exp $

Changes between versions 0.4b32 and 0.4b33 (released ?????????????????)
=======================================================================

1.	Added a note in the restore man page clarifying the question
	'set the permissions on the current directory ?' asked by
	restore at the end of treatment in -i and -x modes.

2.	Fixed the endianess issues when reading compressed tapes.
	Thanks to Dark Force <daq4th@users.sourceforge.net> for
	reporting this bug and providing test cases.

3.	Fixed the "ACL won't be dumped" warning message (which showed
	an extra, unrelated error message). Thanks to Dragan Krnic
	<dkrnic@lycos.com> for reporting this bug.

4.	Made dump look first into /etc/fstab, then into /etc/mtab 
	when searching for filesystem paths. Also fixed some problems
	caused by binding mounts or multiple block device mounts.
	Thanks to Matus Uhlar <uhlar@fantomas.sk>, Elliott Mitchell
	<ehem@m5p.com>, Greg Edwards <gedwards@users.sourceforge.net>.
	(fixes Debian bugs #147086 and #160305, Sourceforge bug #618699)

5.	Made dump's -I option accept the value '0' meaning all the
	read errors will be ignored. This can be useful when running
	dump from unattended sessions (like cron jobs). Thanks to
	John I Wang <jiwang@users.sourceforge.net> for the suggestion.

Changes between versions 0.4b31 and 0.4b32 (released November 15, 2002)
=======================================================================

1.	Changed dump to use fcntl(F_SETLK) style locking instead
	of flock() when locking the dumpdates file. With the old 
	locking scheme, a local user having read rights on the 
	dumpdates file could be able to do a Denial of Service attack
	on dump. In order to lock the dumpdates file with the new
	scheme, the user would need to have write access on the file.
	Thanks to Richard Johnson <Richard.Johnson3@ey.com> for 
	reporting the bug (originally a bugtraq post).
