@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.73 2003/01/10 10:31:07 stelian Exp $
+$Id: THANKS,v 1.74 2003/01/10 10:52:48 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -95,6 +95,7 @@ Bob Snyder		rsnyder@janet.advsys.com
 Jeffrey Sofferin	sofferin@users.sourceforge.net
 Gabriel Somlo		somlo@cs.colostate.edu
 Clemens Stiglechner	a9401816@unet.univie.ac.at
+Michal Szymanski	msz@astrouw.edu.pl
 Matti Taskinen		mkt@rni.helsinki.fi
 Jason L Tibbitts III	tibbs@math.uh.edu
 Mike Tibor		tibor@lib.uaa.alaska.edu
